bdr.BDR2.scala.error
Compilation error:
BDR2:20: error: Unmatched closing brace '}' ignored here
	}
        ^